2022-05-12  Marco Colombo <mar.colombo13@gmail.com>

	* vignettes/rmd/Rcpp-FAQ.Rmd: Fixed typo

2022-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-FAQ.Rmd: Add paragraph about Date(time) not
	being aimed at parsing large quantities at once
	* vignettes/pdf/Rcpp-FAQ.pdf: Idem

	* vignettes/rmd/Rcpp.bib: Add four entries
        * inst/bib/Rcpp.bib: Idem

2022-03-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2022-03-13  Iñaki Ucar  <iucar@fedoraproject.org>

	* src/barrier.cpp: Untag tokens upon removal from the precious list,
	so that the internal reference counter can be safely decremented by R

2022-03-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

	* tests/tinytest.R: Disable full tests on four-digits release to not
	exceed CRAN test time preference

2022-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

	* inst/tinytest/cpp/sugar.cpp: Also conditionally replace
	std::unary_function with std::function
	* vignettes/rmd/Rcpp-sugar.Rmd: Replace std::unary_function example
	with std::function (implicitly requiring C++ in vignette example)
	* vignettes/rmd/Rcpp-FAQ.Rmd: Idem

2022-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Language.h: To quieten compilations, replace
	std::(unary|binary)_function with std::function for C++11 or later
	* inst/include/Rcpp/StringTransformer.he: Idem

2022-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2022-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/attributes.cpp: Make three small changes to permit compilation
	under C++98 now (while we consider just turning to C++11 overall)

2022-01-14  Dirk Eddelbuettel  <edd@debian.org>
